upgraded to Spring Boot 3.2.4